# colour

./: .coveragerc  .gitattributes  .gitignore  .landscape.yml  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .style.yapf  .travis.yml  BIBLIOGRAPHY.bib  BIBLIOGRAPHY.rst  CHANGES.rst  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  CONTRIBUTORS.rst  COPYING  GRANTS  LICENSE  MANIFEST.in  README.rst  REFERENCES.rst  SPONSORS.rst  THIRD_PARTY  TODO.rst  _elements.py  asv.conf.json  azure-pipelines.yml  colour_broadcasting.py  colour_vectorise.py  dpalsd[p  et --hard HEAD@{5}  package.py  pyproject.toml  report.py  requirements.txt  setup.py  tasks.py  tcs_to_rgb.py  try.py
.devcontainer/: devcontainer.json  dockerfile
.devcontainer/scripts/: post-create.zsh  post-start.zsh  welcome.txt
.github/: PULL_REQUEST_TEMPLATE.md  funding.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  documentation-improvement.yml  feature-request.yml  question.yml
.github/workflows/: continuous-integration-documentation.yml  continuous-integration-package.yml  continuous-integration-quality-unit-tests.yml  continuous-integration-static-type-checking.yml  continuous-integration.yml
benchmarks/: README.rst  asv.conf.conda.json  asv.conf.json  asv.conf.venv.json
benchmarks/benchmarks/: benchmarks.py
benchmarks/factories/: __init__.py
color/: __init__.py  blackbody.py  chromaticAdaptation.py  chromatic_adaptation.py  colorCheckers.py  color_checkers.py  colorspaces.py  commands.py  cri.py  dataStructures.py  data_structures.py  deprecated.py  derivation.py  difference.py  exceptions.py  illuminants.py  lightness.py  luminance.py  luminosity.py  matrix.py  spectral.py  temperature.py  transformations.py  verbose.py
color/algebra/: __init__.py  common.py  interpolation.py  matrix.py  regression.py
color/colorspaces/: __init__.py  acesRgb.py  aces_rgb.py  adobeRgb1998.py  adobeWideGamutRgb.py  adobe_rgb_1998.py  adobe_wide_gamut_rgb.py  alexaWideGamutRgb.py  alexa_wide_gamut_rgb.py  appleRgb.py  apple_rgb.py  bestRgb.py  best_rgb.py  betaRgb.py  beta_rgb.py  cLog.py  c_log.py  cieRgb.py  cie_rgb.py  colorMatchRgb.py  color_match_rgb.py  colorspace.py  dciP3.py  dci_p3.py  donRgb4.py  don_rgb_4.py  eciRgbV2.py  eci_rgb_v2.py  ektaSpacePs5.py  ekta_space_ps5.py  maxRgb.py  max_rgb.py  ntscRgb.py  ntsc_rgb.py  palSecamRgb.py  pal_secam_rgb.py  pointerGamut.py  pointer_gamut.py  proPhotoRgb.py  prophoto_rgb.py  (+14 more)
color/computation/: blackbody.py  chromatic_adaptation.py  cmfs.py  colorspace.py  cri.py  deprecated.py  difference.py  illuminants.py  lefs.py  lightness.py  spectrum.py  temperature.py  transformations.py  tristimulus.py
color/data/: lefs.py
color/dataset/: cmfs.py  lefs.py  tcs.py
color/examples/: examplesBlackbody.py  examplesChromaticAdaptation.py  examplesColorCheckers.py  examplesColorspaces.py  examplesDerivation.py  examplesLightness.py  examplesLuminance.py  examplesPlots.py  examplesTemperature.py  examplesTransformations.py  examples_blackbody.py  examples_chromatic_adaptation.py  examples_cmfs.py  examples_color_checkers.py  examples_colorspaces.py  examples_correction.py  examples_cri.py  examples_deprecated.py  examples_derivation.py  examples_difference.py  examples_fitting.py  examples_illuminants.py  examples_interpolation.py  examples_lefs.py  examples_lightness.py  examples_plots.py  examples_spectral.py  examples_spectrum.py  examples_temperature.py  examples_transformations.py  examples_tristimulus.py
color/globals/: constants.py
color/spectral/: __init__.py  blackbody.py  cmfs.py  color_checkers.py  correction.py  illuminants.py  luminosity.py  spd.py  tcs.py  transformations.py
color/spectrum/: __init__.py  blackbody.py  cfs.py  cmfs.py  color_checkers.py  correction.py  illuminants.py  lefs.py  luminosity.py  photometry.py  spd.py  tcs.py  transformations.py
color/tests/: tests.py
color/utilities/: common.py  data_structures.py  decorators.py  exceptions.py
colour/: __init__.py
colour/adaptation/: __init__.py  cat.py  cie1994.py  cmccat2000.py  fairchild1990.py  fairchild2020.py  vonkries.py  zhai2018.py
colour/algebra/: __init__.py  common.py  extrapolation.py  geometry.py  interpolation.py  matrix.py  optimize.py  prng.py  random.py  regression.py
colour/appearance/: Jiang2013.py  __init__.py  atd95.py  cam16.py  ciecam02.py  ciecam16.py  hellwig2022.py  hke.py  hunt.py  kim2009.py  llab.py  nayatani95.py  (+3 more)
colour_science.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: advanced.rst  api.rst  api_detailed.rst  api_reference.rst  basics.rst  bibliography.bib  bibliography.rst  colour.adaptation.cie1994.rst  colour.adaptation.cmccat2000.rst  colour.adaptation.dataset.cat.rst  colour.adaptation.dataset.rst  colour.adaptation.fairchild1990.rst  colour.adaptation.rst  colour.adaptation.vonkries.rst  colour.algebra.coordinates.rst  colour.algebra.coordinates.transformations.rst  colour.algebra.extrapolation.rst  colour.algebra.geometry.rst  colour.algebra.interpolation.rst  colour.algebra.matrix.rst  colour.algebra.random.rst  colour.algebra.rst  colour.appearance.atd95.rst  colour.appearance.ciecam02.rst  colour.appearance.hunt.rst  colour.appearance.llab.rst  colour.appearance.nayatani95.rst  colour.appearance.rlab.rst  colour.appearance.rst  colour.biochemistry.michaelis_menten.rst  colour.biochemistry.rst  colour.blindness.rst  colour.characterisation.cameras.rst  colour.characterisation.dataset.cameras.dslr.rst  colour.characterisation.dataset.cameras.dslr.spectral_sensitivities.rst  colour.characterisation.dataset.cameras.rst  colour.characterisation.dataset.colour_checkers.chromaticity_coordinates.rst  colour.characterisation.dataset.colour_checkers.rst  colour.characterisation.dataset.colour_checkers.spds.rst  colour.characterisation.dataset.displays.crt.rgb_primaries.rst  (+251 more)
utilities/: build_sphinx_documentation.sh  citations_scraping.py  export_todo.py  gatherFiles.sh  generate_plots.py  literalise.py  lut_checker.py  mock_for_colour.py  references_scraping.py  run_examples.sh  sanitizer.py  unicode_to_ascii.py
(+1926 files in other folders)
